<resources>
    <string name="app_name">Application Gestion Logement</string>
    <string name="TextviewPr">Accueil Application Logement</string>
    <string name="TextviewAdd">Ajout d\'un logement :</string>
    <string name="TextviewListe">Liste des logements :</string>
    <string name="title_activity_ajout_logement">AjoutLogement</string>
    <string name="type_logement1">Appartement</string>
    <string name="type_logement2">Studio</string>
    <string name="type_logement3">Chambre chez l\'habitant</string>
    <string name="Codepostal">CP :</string>
    <string name="Ville">Ville :</string>
    <string name="Rue">Rue :</string>
    <string name='Complementadresse'>Complement adresse :</string>
    <string name='Prixlogement'>Prix :</string>
    <string name='Surfacelogement'>Surface :</string>
    <string name='NbPlaces'>Nb Places :</string>
    <string name='NbChambres'>Nb Chambres :</string>
    <string name='MeubleStudio'>Studio Meublé :</string>
    <string name='PartiesCommunesCCH'>Parties Communes :</string>

    <string-array name="villes_array">
        <item>Angers</item>
        <item>Nantes</item>
        <item>Beaufort en anjou</item>
    </string-array>

</resources>
