<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jordan.ppe4_androidbdd.MainActivity">


    <TextView
        android:text="@string/TextviewPr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:id="@+id/textViewPr"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_alignStart="@+id/AddButton" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_marginStart="38dp"
        android:layout_marginTop="62dp"
        android:id="@+id/AddButton"
        android:layout_below="@+id/textViewPr"
        android:onClick="CliqueAddButton"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/AddButton"
        android:id="@+id/ListeButton" />

    <TextView
        android:text="@string/TextviewAdd"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:id="@+id/textViewAdd"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/AddButton"
        android:layout_alignBottom="@+id/AddButton"
        android:layout_alignTop="@+id/AddButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:text="@string/TextviewListe"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:id="@+id/textViewListe"
        android:layout_alignTop="@+id/ListeButton"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/ListeButton"
        android:layout_alignBottom="@+id/ListeButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logologement"
        android:id="@+id/logoAccueil"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
